FIX: responsiveness on mobile and ADD: styling for audio tag

--- a/until-now/src/App.css
+++ b/until-now/src/App.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   padding: 0;
   transition: 0.3s all;
+  box-sizing: border-box;
 }
 
 a {
@@ -20,13 +21,21 @@ a:focus {
   opacity: 0.6;
 }
 
+audio {
+  background-color: #eeeeee;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
+
 audio::-webkit-media-controls-panel {
   background-color: #eeeeee;
 }
 
 canvas {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 .o-lyrics {
@@ -52,5 +61,12 @@ canvas {
     margin-left: -333px;
     margin-top: -250px;
     width: 666px;
+  }
+}
+
+@media screen and (max-width: 30em) {
+  canvas {
+    width: 100%;
+    height: 100vh;
   }
 }
